--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
-
+    <a href="./recipes/crab_stuffed_mushrooms.html">Crab Stuffed Mushrooms</a>
   </body>
 </html>
