--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/crab_stuffed_mushrooms.html">Crab Stuffed Mushrooms</a>
+    <ul>
+      <li> <a href="recipes/crab_stuffed_mushrooms.html">Crab Stuffed Mushrooms</a></li>
+      <li> <a href="recipes/hobo_ramen.html">Hobo Ramen</a></li>
+      <li> <a href="recipes/brown_butter_chocolate_cookies.html">Brown Butter Chocolate Cookies</a></li>
+    </ul>
   </body>
 </html>
