--- a/recipes/brown_butter_chocolate_cookies.html
+++ b/recipes/brown_butter_chocolate_cookies.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hobo Ramen</title>
+    <title>Brown Butter Chocolate</title>
   </head>
   <body>
-    <h1>Hobo Ramen</h1>
+    <h1>Brown Butter Chocolate</h1>
     <img src="../images/brown_buttoner_chocolate_cookies.jpg" alt="Brown butter chocolate cookies" width="500px">
     <h2>Description</h2>
     <p>These yummy brown butter chocolate chip cookies have crispy edges and soft and chewy centers.</p>
