--- a/index.html
+++ b/index.html
@@ -4,13 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <ul>
-      <li> <a href="recipes/crab_stuffed_mushrooms.html">Crab Stuffed Mushrooms</a></li>
-      <li> <a href="recipes/hobo_ramen.html">Hobo Ramen</a></li>
-      <li> <a href="recipes/brown_butter_chocolate_cookies.html">Brown Butter Chocolate Cookies</a></li>
-    </ul>
+    <ol>
+      <li>
+        <img src="./images/crab_stuffed_mushrooms.png" alt="Brown butter chocolate cookies" width="100px" height="auto">
+        <a href="recipes/crab_stuffed_mushrooms.html">Crab Stuffed Mushrooms</a>
+      </li>
+      <li>
+        <img src="./images/hobo_ramen.jpg" alt="Hobo Ramen" width="100px" height="auto">
+        <a href="recipes/hobo_ramen.html">Hobo Ramen</a>
+      </li>
+      <li>
+        <img src="./images/brown_buttoner_chocolate_cookies.jpg" alt="Brown butter chocolate cookies" width="100px" height="auto">
+        <a href="recipes/brown_butter_chocolate_cookies.html">Brown Butter Chocolate Cookies</a>
+      </li>
+    </ol>
   </body>
 </html>
