--- a/recipes/brown_butter_chocolate_cookies.html
+++ b/recipes/brown_butter_chocolate_cookies.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brown Butter Chocolate</title>
+    <link rel="stylesheet" href="./../styles.css">
   </head>
   <body>
     <h1>Brown Butter Chocolate</h1>
