--- a/recipes/crab_stuffed_mushrooms.html
+++ b/recipes/crab_stuffed_mushrooms.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crab Stuffed Mushrooms</title>
+    <link rel="stylesheet" href="./../styles.css">
   </head>
   <body>
     <h1>Crab Stuffed Mushrooms</h1>
