--- a/recipes/hobo_ramen.html
+++ b/recipes/hobo_ramen.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hobo Ramen</title>
+    <link rel="stylesheet" href="./../styles.css">
   </head>
   <body>
     <h1>Hobo Ramen</h1>
